--- a/Docker.Dotnet.UI/Components/Pages/Error.razor
+++ b/Docker.Dotnet.UI/Components/Pages/Error.razor
@@ -1,15 +1,17 @@
 ﻿@page "/Error"
-@using System.Diagnostics
+@using Docker.Dotnet.UI.ViewModels
+
+@inherits MyComponentBase<ErrorViewModel>
 
 <PageTitle>Error</PageTitle>
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (ShowRequestId)
+@if (Vm!.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@RequestId</code>
+        <strong>Request ID:</strong> <code>@Vm.RequestId</code>
     </p>
 }
 
@@ -23,14 +25,3 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
-
-@code{
-    [CascadingParameter]
-    private HttpContext? HttpContext { get; set; }
-
-    private string? RequestId { get; set; }
-    private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
-
-    protected override void OnInitialized() =>
-        RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
-}
