--- a/Docker.Dotnet.UI/Components/Pages/AccountPages/AccessDenied.razor
+++ b/Docker.Dotnet.UI/Components/Pages/AccountPages/AccessDenied.razor
@@ -1,7 +1,7 @@
 @page "/Account/AccessDenied"
 @using Docker.Dotnet.UI.ViewModels
 
-@inherits MyComponentBase<ViewModel>
+@inherits MyComponentBase
 
 @inject NavigationManager NavigationManager
 
